tests/tagged-unions/tagged-unions.exp
Error: interfaces-neg.js:25
 25:   (data: ISystemData);
        ^^^^ IUserData. This type is incompatible with
 25:   (data: ISystemData);
              ^^^^^^^^^^^ ISystemData
  Property `kind` is incompatible:
      9:   kind: "user",
                 ^^^^^^ string literal `user`. Expected string literal `system`, got `user` instead
     13:   kind: "system",
                 ^^^^^^^^ string literal `system`

Error: interfaces-neg.js:25
 25:   (data: ISystemData);
        ^^^^ IUserData. This type is incompatible with
 25:   (data: ISystemData);
              ^^^^^^^^^^^ ISystemData
  Property `kind` is incompatible:
     13:   kind: "system",
                 ^^^^^^^^ string literal `system`. Expected string literal `user`, got `system` instead
      9:   kind: "user",
                 ^^^^^^ string literal `user`

Error: type-decls-neg.js:29
 29:   (data: SystemData);
        ^^^^ object type. This type is incompatible with
 29:   (data: SystemData);
              ^^^^^^^^^^ object type
  Property `kind` is incompatible:
     11:   kind: "user",
                 ^^^^^^ string literal `user`. Expected string literal `system`, got `user` instead
     17:   kind: "system",
                 ^^^^^^^^ string literal `system`

Error: type-decls-neg.js:29
 29:   (data: SystemData);
        ^^^^ object type. This type is incompatible with
 29:   (data: SystemData);
              ^^^^^^^^^^ object type
  Property `kind` is incompatible:
     17:   kind: "system",
                 ^^^^^^^^ string literal `system`. Expected string literal `user`, got `system` instead
     11:   kind: "user",
                 ^^^^^^ string literal `user`


Found 4 errors
